added promote to admin and readme file
